qsk-macros/tests/fail/analyze/invalid-layer-option.rs
use qsk_macros::layer;

fn main() {
    layer!(
        ModLayer[InvalidLayerOption]: {
            F -> F,
        },
    );
}
